[gd_scene load_steps=4 format=3 uid="uid://ggk1t1hiboam"]

[ext_resource type="Texture2D" uid="uid://wdi7id6fbtjw" path="res://assets/icons/play.svg" id="1"]
[ext_resource type="Script" path="res://scenes/media/VideoControls.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c5p4gypthlnmf" path="res://assets/icons/pause.svg" id="3"]

[node name="VideoControls" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1

[node name="Player" type="VideoStreamPlayer" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayPause" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1")
texture_pressed = ExtResource("3")
stretch_mode = 3

[node name="Progress" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
step = 0.001
scrollable = false

[node name="ProgressUpdater" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[connection signal="finished" from="AspectRatioContainer/Player" to="." method="_on_Player_finished"]
[connection signal="focus_entered" from="HBoxContainer/PlayPause" to="." method="_on_PlayPause_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/PlayPause" to="." method="_on_PlayPause_focus_exited"]
[connection signal="toggled" from="HBoxContainer/PlayPause" to="." method="_on_PlayPause_toggled"]
[connection signal="drag_ended" from="HBoxContainer/Progress" to="." method="_on_Progress_drag_ended"]
[connection signal="drag_started" from="HBoxContainer/Progress" to="." method="_on_Progress_drag_started"]
[connection signal="value_changed" from="HBoxContainer/Progress" to="." method="_on_Progress_value_changed"]
[connection signal="timeout" from="ProgressUpdater" to="." method="_on_ProgressUpdater_timeout"]
